src/test/ui/self/point-at-arbitrary-self-type-trait-method.stderr
error[E0599]: no method named `foo` found for type `A` in the current scope
  --> $DIR/point-at-arbitrary-self-type-trait-method.rs:9:7
   |
LL | trait B { fn foo(self: Box<Self>); }
   |              --- the method is available for `std::boxed::Box<A>` here
LL | struct A;
   | --------- method `foo` not found for this
...
LL |     A.foo()
   |       ^^^ method not found in `A`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `foo`, perhaps you need to implement it:
           candidate #1: `B`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
